adding dockerfiles for samtools, bwa, bamstats

--- a/docker-training/exercise2/Dockerfile
+++ b/docker-training/exercise2/Dockerfile
@@ -1,5 +1,7 @@
 ###################################################
 #Exercise #2a: Writing your first Dockerfile: tabix
+# To build image :
+#
 ###################################################
 # Start with a base image
 FROM { base_image_name }
