--- a/docker-training/examples/bamstats/Dockerfile
+++ b/docker-training/examples/bamstats/Dockerfile
@@ -2,7 +2,7 @@
 # Example Dockerfile to build a container for bamstats
 # To build image :
 # from absolute path:
-#   docker image build -f /root/bcc2020-training/examples/bamstats/Dockerfile
+#   docker image build -f /root/bcc2020-training/examples/bamstats/Dockerfile .
 # from within the directory containing the dockerfile:
 #   docker image build .
 ##################################################################################
