--- a/docker-training/exercise2/solution/Dockerfile
+++ b/docker-training/exercise2/solution/Dockerfile
@@ -1,10 +1,14 @@
 ####################################################################################################
 # Solution Exercise #2a: Writing your first Dockerfile: tabix
 # To build image :
-# from absolute path:
-#   docker image build -t tabix:v10 -f /root/bcc2020-training/docker-training/exercise2/solution/Dockerfile .
-# from within the directory containing the dockerfile:
-#   docker image build -t tabix:v10 .
+  # from absolute path:
+#    docker build -t tabix:v1.0 -f /root/bcc2020-training/docker-training/exercise2/solution/Dockerfile .
+
+# Alternatively, to build within the directory containing the dockerfile:
+  # first move to directory:
+#    cd /root/bcc2020-training/docker-training/exercise2/solution/
+  # then build image:
+#    docker build -t tabix:v1.0 .
 ###################################################################################################
 
 # Start with a base image
