--- a/nextflow-training/exercise3/hello_examples/GoodbyeWorld/nextflow.config
+++ b/nextflow-training/exercise3/hello_examples/GoodbyeWorld/nextflow.config
@@ -5,7 +5,7 @@
 // The settings available are author, description, defaultBranch, homePage, mainScript, name, nextflowVersion, and version
 manifest {
     author = 'Natalie Perez'
-    description = 'This workflow will print a hello message and store it to a file named Hello.txt'
+    description = 'This workflow will print a goodbye message and store it to a file named Goodbye.txt'
 }
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
