--- a/nextflow-training/exercise2/solution2/nextflow.config
+++ b/nextflow-training/exercise2/solution2/nextflow.config
@@ -5,7 +5,7 @@
 // The settings available are author, description, defaultBranch, homePage, mainScript, name, nextflowVersion, and version
 manifest {
     author = 'Natalie Perez'
-    description = 'This workflow will evaluate SAM file and generate statics about the alignment'
+    description = 'This workflow will evaluate SAM file and generate statistics about the alignment'
 }
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
