--- a/nextflow-training/exercise3/solution/nextflow.config
+++ b/nextflow-training/exercise3/solution/nextflow.config
@@ -10,8 +10,7 @@ manifest {
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
 params {
-  output_sam = 'NA12878_chr20_ds.sam'
-  stats = 'NA12878_chr20_ds.sam.flagstat.metrics'
+  output_sam = 'mini.sam'
   bwa_docker_image = 'quay.io/ldcabansay/bwa:latest'
   bwa_opt = '-M -t'
   read1_fastq = '/root/bcc2020-training/data/NA12878_chr20_ds_r1.fq'
