--- a/nextflow-training/exercise1/solution/nextflow.config
+++ b/nextflow-training/exercise1/solution/nextflow.config
@@ -9,6 +9,7 @@ manifest {
 }
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
+// You may need to update some inputs with your own local path.
 params {
     myName = '/root/bcc2020-training/nextflow-training/exercise1/solution/name.txt'
 }
