--- a/nextflow-training/exercise2/solution/nextflow.config
+++ b/nextflow-training/exercise2/solution/nextflow.config
@@ -9,14 +9,14 @@ manifest {
 }
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
+// You may need to update some inputs with your own local path.
 params {
     input_sam = '/root/bcc2020-training/data/mini.sam'
-    docker_image = 'quay.io/ldcabansay/samtools:latest'
 }
 
 // The docker scope controls how Docker containers are executed by Nextflow.
 // Here, we enable it to true so that our workflow executes on the Docker container we defined by default.
+process.container = 'quay.io/ldcabansay/samtools:latest'
 docker {
     enabled = true
-    container = params.docker_image
 }
