--- a/nextflow-training/exercise3/solution/nextflow.config
+++ b/nextflow-training/exercise3/solution/nextflow.config
@@ -9,6 +9,7 @@ manifest {
 }
 
 // The params scope lets you define parameters that will be accessible in the pipeline script.
+// You may need to update some inputs with your own local path.
 params {
   output_sam = 'mini.sam'
   bwa_docker_image = 'quay.io/ldcabansay/bwa:latest'
