--- a/nextflow-training/exercise3/hello_examples/GoodbyeWorld/nextflow.config
+++ b/nextflow-training/exercise3/hello_examples/GoodbyeWorld/nextflow.config
@@ -1,5 +1,6 @@
-// When a pipeline script is launched, Nextflow looks for this nextflow.config file.
-// This file defines settings and properties and can be organized into different scopes.
+/* When a pipeline script is launched, Nextflow looks for this nextflow.config file.
+ * This file defines settings and properties and can be organized into different scopes.
+ */
 
 // The manifest scope lets you define some metadata.
 // The settings available are author, description, defaultBranch, homePage, mainScript, name, nextflowVersion, and version
